--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,30 @@ a {
     color: #fafaff;
     font-size: 1.5rem; }
 
+.nav_ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%; }
+  .nav_ul-li {
+    position: relative; }
+    .nav_ul-li a {
+      padding-bottom: 5px;
+      color: #fafaff;
+      font-size: 1.5rem; }
+      .nav_ul-li a:hover::after {
+        content: "";
+        display: inline-block;
+        width: 40px;
+        height: 1px;
+        background-color: #fafaff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%);
+        top: 29px; }
+
 .thems_wrapper {
   display: flex;
   max-width: 500px;
@@ -183,46 +207,21 @@ a {
   .create_task:hover {
     background-color: #085af1; }
 
-.nav_ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%; }
-  .nav_ul-li {
-    position: relative; }
-    .nav_ul-li a {
-      padding-bottom: 5px;
-      color: #fafaff;
-      font-size: 1.5rem; }
-      .nav_ul-li a:hover::after {
-        content: "";
-        display: inline-block;
-        width: 40px;
-        height: 1px;
-        background-color: #fafaff;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%);
-        top: 29px; }
-
 .app_Container {
   width: 100%;
   height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 0 10px;
-  padding-top: 100px; }
+  padding: 0 10px; }
   .app_Container .app_wrapper {
+    display: flex;
+    flex-direction: column;
     max-width: 600px;
-    height: 90%;
+    height: 70%;
     padding: 5px;
     margin: auto;
     background-color: #eeebeb;
     border-radius: 10px;
     position: relative;
+    top: 100px;
     overflow: auto; }
 
 .tasks_wrapper {
@@ -348,6 +347,7 @@ a {
   color: #3479f8;
   visibility: hidden;
   opacity: 0;
+  z-index: 1;
   transition: all 0.6s ease-in-out;
   top: 16px;
   left: -10px;
@@ -437,6 +437,9 @@ a {
           border: 1px solid #0299be; }
         .form_container .form .form_about-description::placeholder {
           font-size: 13px; }
+        @media (max-width: 700px) {
+          .form_container .form .form_about-description {
+            padding-bottom: 30px; } }
         .form_container .form .form_about-description::placeholder {
           margin: auto;
           text-align: center; }
@@ -450,6 +453,9 @@ a {
         padding: 20px;
         flex-flow: wrap;
         color: #06608a; }
+        @media (max-width: 600px) {
+          .form_container .form .form_about_type {
+            justify-content: center; } }
         .form_container .form .form_about_type .type {
           background-color: #fffefe;
           padding: 5px;
@@ -457,6 +463,9 @@ a {
           box-shadow: 1px 1px 5px 1px #bdd9e6;
           margin-bottom: 30px;
           cursor: pointer; }
+          @media (max-width: 600px) {
+            .form_container .form .form_about_type .type {
+              margin-bottom: 15px; } }
           .form_container .form .form_about_type .type i {
             color: #06608a;
             margin-right: 10px; }
@@ -471,7 +480,7 @@ a {
       align-items: center; }
       .form_container .form .form_details div {
         margin-bottom: 30px;
-        width: 100px;
+        width: 90px;
         text-align: center;
         cursor: pointer;
         z-index: 32; }
@@ -672,6 +681,9 @@ a {
   border-radius: 10px;
   left: 50%;
   transform: translateX(-50%); }
+  @media (max-width: 600px) {
+    .update_wrapper {
+      max-width: 300px; } }
   .update_wrapper .update_modal {
     display: flex;
     flex-direction: column;
