--- a/scss/components/_update_modal.scss
+++ b/scss/components/_update_modal.scss
@@ -5,6 +5,9 @@
   position: absolute;
   width: 100%;
   max-width: 350px;
+  @media (max-width: 600px) {
+    max-width: 300px;
+  }
   transition: all 0.3s ease-in-out;
   visibility: hidden;
   opacity: 0;
