--- a/scss/layout/_app_layout.scss
+++ b/scss/layout/_app_layout.scss
@@ -1,44 +1,18 @@
-.nav_ul {
-  @include flexPos(space-between);
-
-  &-li {
-    position: relative;
-    a {
-      padding-bottom: 5px;
-      @include title;
-      &:hover {
-        &::after {
-          content: "";
-          display: inline-block;
-          width: 40px;
-          height: 1px;
-          background-color: $theme_1-text;
-          position: absolute;
-          @include posAlignCenter(translate(-50%));
-          top: 29px;
-        }
-      }
-    }
-  }
-}
 .app_Container {
   width: 100%;
   height: 100%;
-  //background-image: url("../img/juan-chavez-47WqcSiznzo-unsplash.jpg");
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   padding: 0 10px;
-  padding-top: 100px;
   .app_wrapper {
+    display: flex;
+    flex-direction: column;
     max-width: 600px;
-    height: 90%;
+    height: 70%;
     padding: 5px;
     margin: auto;
     background-color: rgb(238, 235, 235);
     border-radius: 10px;
     position: relative;
+    top: 100px;
     overflow: auto;
   }
 }
