--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ a {
   position: absolute;
   padding: 10px;
   transition: all 0.4s ease-in-out;
-  visibility: hidden;
+  z-index: -10;
   transform: translate(2%, -5%);
   opacity: 0;
   overflow: hidden; }
@@ -676,7 +676,7 @@ a {
   width: 100%;
   max-width: 350px;
   transition: all 0.3s ease-in-out;
-  visibility: hidden;
+  z-index: -2;
   opacity: 0;
   border-radius: 10px;
   left: 50%;
@@ -791,4 +791,5 @@ a {
 
 .showUpdateModal {
   visibility: visible;
-  opacity: 1; }
+  opacity: 1;
+  z-index: 30; }
