--- a/scss/components/_update_modal.scss
+++ b/scss/components/_update_modal.scss
@@ -9,7 +9,7 @@
     max-width: 300px;
   }
   transition: all 0.3s ease-in-out;
-  visibility: hidden;
+  z-index: -2;
   opacity: 0;
   border-radius: 10px;
   left: 50%;
@@ -106,4 +106,5 @@
 .showUpdateModal {
   visibility: visible;
   opacity: 1;
+  z-index: 30;
 }
